--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,15 +18,9 @@
   </head>
   <body>
     <div class="container">
-       <div class="jumbotron jumbotron fluid">
-        <h1 class="display-4">Comics?</h1> 
-        <h3 class="lead">Assignment 44</h3>
-
-   
-
-
-
-       
+       <div class="jumbotron jumbotro-fluid">
+        <h1>Comics?</h1> 
+        <h3>Assignment 44</h3>
       <h2> Completed task </h2>
         <% for(var i = 0; i < complete.length; i++){ %>
             <li><%= complete[i] %></li>
