--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <html>
   <head>
-    <title> Random Comic </title>
+    <link rel="icon" 
+      type="image/png" 
+      href="favicon.ico">
+    <title> Random Comics </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100"     rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Original Comic<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/random">Random Comic</a>
+      <a class="nav-item nav-link" href="/rand">Random Comic</a>
     </div>
   </div>
 </nav>
