fav and random?

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,7 @@
 <html>
   <head>
-    <link rel="icon" 
-      type="image/png" 
-      href="favicon.ico">
-    <title> Random Comics </title>
+   
+    <title> <img src="favicon.ico" alt="Pegling">Random Comics </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100"     rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
