--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -47,7 +47,7 @@
         $('#my-button').click(function (e){
           $.ajax({
               type: 'POST',
-              url: 'randomComic',
+              url: 'random',
               data: {data : true},
               //dataType:"json",
               success: function(data)
