--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       href="favicon-16x16.png">
     <title> Random Comics </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100"     rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/public/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
@@ -17,7 +17,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Original Comic<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/rand">Random Comic</a>
     </div>
   </div>
@@ -28,7 +28,7 @@
        <h1 class="jumbotron text-center"> Comic Generator </h1>
 
 
-        <h2> Original Comic </h2>
+        <h2> Home</h2>
         <br>
         <h3><%= origComicTitle %></h3> <!--Title-->
         <h4><%= origComicYear %></h4> <!--Year-->
