--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -25,7 +25,7 @@
 
       <h2> Random Comic </h2>
       <br>
-      <button class="btn btn-primary btn-lg btn-block" id="my-button"> Generate New Comic </button>
+      <button class="btn btn-primary btn-lg btn-block" id="my-button"> Shuffle the Comic </button>
       <br>
       <h3 id="comic-title">Barrel - Part 1</h3> <!--Title-->
       <h4 id="comic-year">2006</h4> <!--Year-->
