--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -8,7 +8,7 @@
   <body>
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Comic Project</a>
+  <a class="navbar-brand" href="/">It's Comical</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,7 +21,7 @@
 </nav>
 
     <div class="container">
-      <h1 class="jumbotron text-center"> Comic Generator </h1>
+      <h1 class="jumbotron text-center"> Welcome </h1>
 
       <h2> Random Comic </h2>
       <br>
