--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   <body>
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Welcome to my project!</a>
+  <a class="navbar-brand" href="#">Comic Project</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,7 +25,7 @@
 
 
     <div class="container">
-       <h1 class="jumbotron text-center"> Comic Generator </h1>
+       <h1 class="jumbotron text-center"> Welcome !</h1>
 
 
         <h2> Home</h2>
