--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,9 @@
 
 
     <div class="container">
-       <h1 class="jumbotron text-center"> Welcome !</h1>
+       <h1 class="jumbotron text-center"> Welcome to the Home Page!</h1>
 
 
-        <h2> Home</h2>
         <br>
         <h3><%= origComicTitle %></h3> <!--Title-->
         <h4><%= origComicYear %></h4> <!--Year-->
