--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -21,9 +21,9 @@
 </nav>
 
     <div class="container">
-      <h1 class="jumbotron text-center"> Welcome </h1>
+      <h1 class="jumbotron text-center"> Random Comic Generator </h1>
 
-      <h2> Random Comic </h2>
+   
       <br>
       <button class="btn btn-primary btn-lg btn-block" id="my-button"> Shuffle the Comic </button>
       <br>
