--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -14,7 +14,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Original Comic<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/random">Random Comic</a>
     </div>
   </div>
@@ -72,7 +72,7 @@
 <div class="my-footer">
     <footer>
     <br>
-        Comic Generator &copy; 2019
+        CJ Marguin &copy; 2019
     </footer>
 </div>
 
