--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
 
     <div class="container">
-       <h1 class="jumbotron text-center"> Welcome to the Home Page!</h1>
+       <h1 class="jumbotron text-center"> Welcome Home</h1>
 
 
         <br>
@@ -46,7 +46,7 @@
 <div class="my-footer">
     <footer>
     <br>
-        Comic Generator &copy; 2019
+        CJ Marguin &copy; 2019
     </footer>
 </div>
 
