--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/random">Random Comic</a>
+      <a class="nav-item nav-link" href="/rand">Random Comic</a>
     </div>
   </div>
 </nav>
