--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,10 @@
 
 
 footer {
-    align: center;
+    text-align: center;
+    background-color: #e3f2fd;
+}
+
+nav.navbar.navbar-light{
+    background-color: #e3f2fd;
 }
