--- a/views/rand.ejs
+++ b/views/rand.ejs
@@ -2,7 +2,7 @@
   <head>
     <title> Random Comic </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100"     rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
