--- a/public/styles.css
+++ b/public/styles.css
@@ -8,3 +8,7 @@ footer {
 nav.navbar.navbar-light{
     background-color: #e3f2fd;
 }
+
+#my-button.btn.btn-primary.btn-lg.btn-block{
+    font-family: "Courier New", Courier, monospace;
+}
