--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,7 @@ nav.navbar.navbar-light{
 
 #my-button.btn.btn-primary.btn-lg.btn-block{
     font-family: "Courier New", Courier, monospace;
+    background-color: #e6faff;
 }
 
 .btn-primary {
