--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,6 @@
-
+h3,h4 {
+    text-align: center;
+}
 
 footer {
     text-align: center;
@@ -14,4 +16,8 @@ nav.navbar.navbar-light{
     background-color: #e6faff;
     border-color: #e6faff;
     color: black;
+}
+
+.jumbotron.text-center {
+    color: #0B81A5;
 }
