--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,8 @@ h3,h4 {
 footer {
     text-align: center;
     background-color: #e3f2fd;
+    font-family: "Courier New", Courier, monospace;
+   
 }
 
 nav.navbar.navbar-light{
@@ -22,5 +24,7 @@ nav.navbar.navbar-light{
 
 .jumbotron.text-center {
     color: #0B81A5;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: bold;
 }
 
